[package]
name = "lost_sands_of_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy-inspector-egui = "0.14"


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1